if(NOT BUILD_INSTANCESCRIPTS )
  message("\tInstanceScripts was skipped because BUILD_INSTANCESCRIPTS is unchecked.")
  return()
endif(NOT BUILD_INSTANCESCRIPTS)

PROJECT(InstanceScripts)

SET( prefix ${SCRIPTS_PATH}/InstanceScripts )

set(sources
Auchindoun/AuchenaiCrypts/boss_exarch_maladaar.cpp
Auchindoun/AuchenaiCrypts/boss_shirrak_the_dead_watcher.cpp
Auchindoun/ManaTombs/boss_nexusprince_shaffar.cpp
Auchindoun/ManaTombs/boss_pandemonius.cpp
Auchindoun/SethekkHalls/boss_darkweaver_syth.cpp
Auchindoun/SethekkHalls/boss_tailonking_ikiss.cpp
Auchindoun/SethekkHalls/instance_sethekk_halls.cpp
Auchindoun/ShadowLabyrinth/boss_ambassador_hellmaw.cpp
Auchindoun/ShadowLabyrinth/boss_blackheart_the_inciter.cpp
Auchindoun/ShadowLabyrinth/boss_grandmaster_vorpil.cpp
Auchindoun/ShadowLabyrinth/boss_murmur.cpp
Auchindoun/ShadowLabyrinth/instance_shadow_labyrinth.cpp
AzjolNerub/Ahnkahet/boss_amanitar.cpp
AzjolNerub/Ahnkahet/boss_elder_nadox.cpp
AzjolNerub/Ahnkahet/boss_herald_volazj.cpp
AzjolNerub/Ahnkahet/boss_jedoga_shadowseeker.cpp
AzjolNerub/Ahnkahet/boss_prince_taldaram.cpp
AzjolNerub/Ahnkahet/instance_ahnkahet.cpp
AzjolNerub/AzjolNerub/boss_anubarak.cpp
AzjolNerub/AzjolNerub/boss_hadronox.cpp
AzjolNerub/AzjolNerub/boss_krikthir_the_gatewatcher.cpp
AzjolNerub/AzjolNerub/instance_azjol_nerub.cpp
BaradinHold/boss_alizabal.cpp
BaradinHold/instance_baradin_hold.cpp
BlackfathomDeeps/blackfathom_deeps.cpp
BlackfathomDeeps/boss_aku_mai.cpp
BlackfathomDeeps/boss_gelihast.cpp
BlackfathomDeeps/boss_kelris.cpp
BlackfathomDeeps/instance_blackfathom_deeps.cpp
BlackrockDepths/blackrock_depths.cpp
BlackrockDepths/boss_ambassador_flamelash.cpp
BlackrockDepths/boss_anubshiah.cpp
BlackrockDepths/boss_emperor_dagran_thaurissan.cpp
BlackrockDepths/boss_general_angerforge.cpp
BlackrockDepths/boss_gorosh_the_dervish.cpp
BlackrockDepths/boss_grizzle.cpp
BlackrockDepths/boss_high_interrogator_gerstahn.cpp
BlackrockDepths/boss_magmus.cpp
BlackrockDepths/boss_moira_bronzebeard.cpp
BlackrockDepths/boss_tomb_of_seven.cpp
BlackrockDepths/instance_blackrock_depths.cpp
BlackrockSpire/boss_drakkisath.cpp
BlackrockSpire/boss_gyth.cpp
BlackrockSpire/boss_halycon.cpp
BlackrockSpire/boss_highlord_omokk.cpp
BlackrockSpire/boss_mother_smolderweb.cpp
BlackrockSpire/boss_overlord_wyrmthalak.cpp
BlackrockSpire/boss_pyroguard_emberseer.cpp
BlackrockSpire/boss_quartermaster_zigris.cpp
BlackrockSpire/boss_rend_blackhand.cpp
BlackrockSpire/boss_shadow_hunter_voshgajin.cpp
BlackrockSpire/boss_the_beast.cpp
BlackrockSpire/boss_warmaster_voone.cpp
BlackrockSpire/instance_blackrock_spire.cpp
BlackTemple/black_temple.cpp
BlackTemple/boss_bloodboil.cpp
BlackTemple/boss_illidan.cpp
BlackTemple/boss_mother_shahraz.cpp
BlackTemple/boss_reliquary_of_souls.cpp
BlackTemple/boss_shade_of_akama.cpp
BlackTemple/boss_supremus.cpp
BlackTemple/boss_teron_gorefiend.cpp
BlackTemple/boss_warlord_najentus.cpp
BlackTemple/illidari_council.cpp
BlackTemple/instance_black_temple.cpp
BlackTemple/ShadeOfAkama.cpp
BlackwingLair/boss_broodlord_lashlayer.cpp
BlackwingLair/boss_chromaggus.cpp
BlackwingLair/boss_ebonroc.cpp
BlackwingLair/boss_firemaw.cpp
BlackwingLair/boss_flamegor.cpp
BlackwingLair/boss_nefarian.cpp
BlackwingLair/boss_razorgore.cpp
BlackwingLair/boss_vaelastrasz.cpp
BlackwingLair/boss_victor_nefarius.cpp
BlackwingLair/instance_blackwing_lair.cpp
CavernsOfTime/BattleForMountHyjal/boss_anetheron.cpp
CavernsOfTime/BattleForMountHyjal/boss_archimonde.cpp
CavernsOfTime/BattleForMountHyjal/boss_azgalor.cpp
CavernsOfTime/BattleForMountHyjal/boss_kazrogal.cpp
CavernsOfTime/BattleForMountHyjal/boss_rage_winterchill.cpp
CavernsOfTime/BattleForMountHyjal/hyjal.cpp
CavernsOfTime/BattleForMountHyjal/hyjal_trash.cpp
CavernsOfTime/BattleForMountHyjal/hyjalAI.cpp
CavernsOfTime/BattleForMountHyjal/instance_hyjal.cpp
CavernsOfTime/CullingOfStratholme/boss_chrono_lord_epoch.cpp
CavernsOfTime/CullingOfStratholme/boss_epoch.cpp
CavernsOfTime/CullingOfStratholme/boss_infinite.cpp
CavernsOfTime/CullingOfStratholme/boss_infinite_corruptor.cpp
CavernsOfTime/CullingOfStratholme/boss_mal_ganis.cpp
CavernsOfTime/CullingOfStratholme/boss_meathook.cpp
CavernsOfTime/CullingOfStratholme/boss_salramm.cpp
CavernsOfTime/CullingOfStratholme/boss_salramm_the_fleshcrafter.cpp
CavernsOfTime/CullingOfStratholme/culling_of_stratholme.cpp
CavernsOfTime/CullingOfStratholme/instance_culling_of_stratholme.cpp
CavernsOfTime/DarkPortal/boss_aeonus.cpp
CavernsOfTime/DarkPortal/boss_chrono_lord_deja.cpp
CavernsOfTime/DarkPortal/boss_temporus.cpp
CavernsOfTime/DarkPortal/dark_portal.cpp
CavernsOfTime/DarkPortal/instance_dark_portal.cpp
CavernsOfTime/EscapeFromDurnholdeKeep/boss_captain_skarloc.cpp
CavernsOfTime/EscapeFromDurnholdeKeep/boss_epoch_hunter.cpp
CavernsOfTime/EscapeFromDurnholdeKeep/boss_leutenant_drake.cpp
CavernsOfTime/EscapeFromDurnholdeKeep/instance_old_hillsbrad.cpp
CavernsOfTime/EscapeFromDurnholdeKeep/old_hillsbrad.cpp
ChamberOfAspects/ObsidianSanctum/boss_sartharion.cpp
ChamberOfAspects/ObsidianSanctum/instance_obsidian_sanctum.cpp
ChamberOfAspects/RubySanctum/boss_baltharus_the_warborn.cpp
ChamberOfAspects/RubySanctum/boss_general_zarithrian.cpp
ChamberOfAspects/RubySanctum/boss_halion.cpp
ChamberOfAspects/RubySanctum/boss_saviana_ragefire.cpp
ChamberOfAspects/RubySanctum/instance_ruby_sanctum.cpp
ChamberOfAspects/RubySanctum/ruby_sanctum.cpp
CoilfangReservoir/SerpentShrine/boss_fathomlord_karathress.cpp
CoilfangReservoir/SerpentShrine/boss_hydross_the_unstable.cpp
CoilfangReservoir/SerpentShrine/boss_lady_vashj.cpp
CoilfangReservoir/SerpentShrine/boss_leotheras_the_blind.cpp
CoilfangReservoir/SerpentShrine/boss_lurker_below.cpp
CoilfangReservoir/SerpentShrine/boss_morogrim_tidewalker.cpp
CoilfangReservoir/SerpentShrine/instance_serpent_shrine.cpp
CoilfangReservoir/SteamVault/boss_hydromancer_thespia.cpp
CoilfangReservoir/SteamVault/boss_mekgineer_steamrigger.cpp
CoilfangReservoir/SteamVault/boss_warlord_kalithresh.cpp
CoilfangReservoir/SteamVault/instance_steam_vault.cpp
CoilfangReservoir/underbog/boss_hungarfen.cpp
CoilfangReservoir/underbog/boss_the_black_stalker.cpp
CrusadersColiseum/TrialOfTheChampion/boss_argent_challenge.cpp
CrusadersColiseum/TrialOfTheChampion/boss_black_knight.cpp
CrusadersColiseum/TrialOfTheChampion/boss_grand_champions.cpp
CrusadersColiseum/TrialOfTheChampion/instance_trial_of_the_champion.cpp
CrusadersColiseum/TrialOfTheChampion/trial_of_the_champion.cpp
CrusadersColiseum/TrialOfTheCrusader/boss_anubarak_trial.cpp
CrusadersColiseum/TrialOfTheCrusader/boss_faction_champions.cpp
CrusadersColiseum/TrialOfTheCrusader/boss_lord_jaraxxus.cpp
CrusadersColiseum/TrialOfTheCrusader/boss_northrend_beasts.cpp
CrusadersColiseum/TrialOfTheCrusader/boss_twin_valkyr.cpp
CrusadersColiseum/TrialOfTheCrusader/instance_trial_of_the_crusader.cpp
CrusadersColiseum/TrialOfTheCrusader/trial_of_the_crusader.cpp
Deadmines/boss_mr_smite.cpp
Deadmines/deadmines.cpp
Deadmines/instance_deadmines.cpp
DraktharonKeep/boss_dred.cpp
DraktharonKeep/boss_novos.cpp
DraktharonKeep/boss_tharon_ja.cpp
DraktharonKeep/boss_trollgore.cpp
DraktharonKeep/instance_drak_tharon_keep.cpp
Firelands/boss_alysrazor.cpp
Firelands/instance_firelands.cpp
FrozenHalls/ForgeOfSouls/boss_bronjahm.cpp
FrozenHalls/ForgeOfSouls/boss_devourer_of_souls.cpp
FrozenHalls/ForgeOfSouls/forge_of_souls.cpp
FrozenHalls/ForgeOfSouls/instance_forge_of_souls.cpp
FrozenHalls/HallsOfReflection/boss_falric.cpp
FrozenHalls/HallsOfReflection/boss_marwyn.cpp
FrozenHalls/HallsOfReflection/halls_of_reflection.cpp
FrozenHalls/HallsOfReflection/instance_halls_of_reflection.cpp
FrozenHalls/PitOfSaron/boss_forgemaster_garfrost.cpp
FrozenHalls/PitOfSaron/boss_krickandick.cpp
FrozenHalls/PitOfSaron/boss_scourgelord_tyrannus.cpp
FrozenHalls/PitOfSaron/instance_pit_of_saron.cpp
FrozenHalls/PitOfSaron/pit_of_saron.cpp
Gnomeregan/gnomeregan.cpp
Gnomeregan/instance_gnomeregan.cpp
GruulsLair/boss_gruul.cpp
GruulsLair/boss_high_king_maulgar.cpp
GruulsLair/instance_gruuls_lair.cpp
Gundrak/boss_drakkari_colossus.cpp
Gundrak/boss_eck.cpp
Gundrak/boss_gal_darah.cpp
Gundrak/boss_moorabi.cpp
Gundrak/boss_slad_ran.cpp
Gundrak/instance_gundrak.cpp
HallsOfOrigination/boss_anraphet.cpp
HallsOfOrigination/boss_earthrager_ptah.cpp
HallsOfOrigination/boss_temple_guardian_anhuur.cpp
HallsOfOrigination/instance_halls_of_origination.cpp
HellfireCitadel/BloodFurnace/boss_broggok.cpp
HellfireCitadel/BloodFurnace/boss_kelidan_the_breaker.cpp
HellfireCitadel/BloodFurnace/boss_the_maker.cpp
HellfireCitadel/BloodFurnace/instance_blood_furnace.cpp
HellfireCitadel/HellfireRamparts/boss_omor_the_unscarred.cpp
HellfireCitadel/HellfireRamparts/boss_vazruden_the_herald.cpp
HellfireCitadel/HellfireRamparts/boss_watchkeeper_gargolmar.cpp
HellfireCitadel/HellfireRamparts/instance_hellfire_ramparts.cpp
HellfireCitadel/MagtheridonsLair/boss_magtheridon.cpp
HellfireCitadel/MagtheridonsLair/instance_magtheridons_lair.cpp
HellfireCitadel/ShatteredHalls/boss_nethekurse.cpp
HellfireCitadel/ShatteredHalls/boss_warbringer_omrogg.cpp
HellfireCitadel/ShatteredHalls/boss_warchief_kargath_bladefist.cpp
HellfireCitadel/ShatteredHalls/instance_shattered_halls.cpp
IcecrownCitadel/boss_blood_prince_council.cpp
IcecrownCitadel/boss_blood_queen_lana_thel.cpp
IcecrownCitadel/boss_deathbringer_saurfang.cpp
IcecrownCitadel/boss_festergut.cpp
IcecrownCitadel/boss_lady_deathwhisper.cpp
IcecrownCitadel/boss_lord_marrowgar.cpp
IcecrownCitadel/boss_professor_putricide.cpp
IcecrownCitadel/boss_rotface.cpp
IcecrownCitadel/boss_sindragosa.cpp
IcecrownCitadel/boss_the_lich_king.cpp
IcecrownCitadel/boss_valithria_dreamwalker.cpp
IcecrownCitadel/icecrown_citadel.cpp
IcecrownCitadel/icecrown_citadel_teleport.cpp
IcecrownCitadel/instance_icecrown_citadel.cpp
Karazhan/boss_curator.cpp
Karazhan/boss_maiden_of_virtue.cpp
Karazhan/boss_midnight.cpp
Karazhan/boss_moroes.cpp
Karazhan/boss_netherspite.cpp
Karazhan/boss_nightbane.cpp
Karazhan/boss_prince_malchezaar.cpp
Karazhan/boss_shade_of_aran.cpp
Karazhan/boss_terestian_illhoof.cpp
Karazhan/bosses_opera.cpp
Karazhan/instance_karazhan.cpp
Karazhan/karazhan.cpp
MagistersTerrace/boss_felblood_kaelthas.cpp
MagistersTerrace/boss_priestess_delrissa.cpp
MagistersTerrace/boss_selin_fireheart.cpp
MagistersTerrace/boss_vexallus.cpp
MagistersTerrace/instance_magisters_terrace.cpp
MagistersTerrace/magisters_terrace.cpp
Maraudon/boss_celebras_the_cursed.cpp
Maraudon/boss_landslide.cpp
Maraudon/boss_noxxion.cpp
Maraudon/boss_princess_theradras.cpp
MoltenCore/boss_baron_geddon.cpp
MoltenCore/boss_garr.cpp
MoltenCore/boss_gehennas.cpp
MoltenCore/boss_golemagg.cpp
MoltenCore/boss_lucifron.cpp
MoltenCore/boss_magmadar.cpp
MoltenCore/boss_majordomo_executus.cpp
MoltenCore/boss_ragnaros.cpp
MoltenCore/boss_shazzrah.cpp
MoltenCore/boss_sulfuron_harbinger.cpp
MoltenCore/instance_molten_core.cpp
Naxxramas/boss_anubrekhan.cpp
Naxxramas/boss_faerlina.cpp
Naxxramas/boss_four_horsemen.cpp
Naxxramas/boss_gluth.cpp
Naxxramas/boss_gothik.cpp
Naxxramas/boss_grobbulus.cpp
Naxxramas/boss_heigan.cpp
Naxxramas/boss_kelthuzad.cpp
Naxxramas/boss_loatheb.cpp
Naxxramas/boss_maexxna.cpp
Naxxramas/boss_noth.cpp
Naxxramas/boss_patchwerk.cpp
Naxxramas/boss_razuvious.cpp
Naxxramas/boss_sapphiron.cpp
Naxxramas/boss_thaddius.cpp
Naxxramas/instance_naxxramas.cpp
Nexus/EyeOfEternity/boss_malygos.cpp
Nexus/EyeOfEternity/instance_eye_of_eternity.cpp
Nexus/Nexus/boss_anomalus.cpp
Nexus/Nexus/boss_commander_kolurg.cpp
Nexus/Nexus/boss_commander_stoutbeard.cpp
Nexus/Nexus/boss_keristrasza.cpp
Nexus/Nexus/boss_magus_telestra.cpp
Nexus/Nexus/boss_ormorok.cpp
Nexus/Nexus/commander_kolurg.cpp
Nexus/Nexus/commandeR_stoutbeard.cpp
Nexus/Nexus/instance_nexus.cpp
Nexus/Oculus/boss_drakos.cpp
Nexus/Oculus/boss_eregos.cpp
Nexus/Oculus/boss_urom.cpp
Nexus/Oculus/boss_varos.cpp
Nexus/Oculus/instance_oculus.cpp
Nexus/Oculus/oculus.cpp
OnyxiasLair/boss_onyxia.cpp
OnyxiasLair/instance_onyxias_lair.cpp
RazorfenDowns/boss_amnennar_the_coldbringer.cpp
RazorfenDowns/instance_razorfen_downs.cpp
RazorfenDowns/razorfen_downs.cpp
RazorfenKraul/instance_razorfen_kraul.cpp
RazorfenKraul/razorfen_kraul.cpp
RuinsOfAhnQiraj/boss_ayamiss.cpp
RuinsOfAhnQiraj/boss_buru.cpp
RuinsOfAhnQiraj/boss_kurinnaxx.cpp
RuinsOfAhnQiraj/boss_moam.cpp
RuinsOfAhnQiraj/boss_ossirian.cpp
RuinsOfAhnQiraj/boss_rajaxx.cpp
RuinsOfAhnQiraj/instance_ruins_of_ahnqiraj.cpp
ScarletEnclave/chapter1.cpp
ScarletEnclave/chapter2.cpp
ScarletEnclave/chapter5.cpp
ScarletEnclave/the_scarlet_enclave.cpp
ScarletEnclave/zone_the_scarlet_enclave.cpp
ScarletMonastery/boss_arcanist_doan.cpp
ScarletMonastery/boss_azshir_the_sleepless.cpp
ScarletMonastery/boss_bloodmage_thalnos.cpp
ScarletMonastery/boss_headless_horseman.cpp
ScarletMonastery/boss_herod.cpp
ScarletMonastery/boss_high_inquisitor_fairbanks.cpp
ScarletMonastery/boss_houndmaster_loksey.cpp
ScarletMonastery/boss_interrogator_vishas.cpp
ScarletMonastery/boss_mograine_and_whitemane.cpp
ScarletMonastery/boss_scorn.cpp
ScarletMonastery/instance_scarlet_monastery.cpp
Scholomance/boss_darkmaster_gandling.cpp
Scholomance/boss_death_knight_darkreaver.cpp
Scholomance/boss_doctor_theolen_krastinov.cpp
Scholomance/boss_illucia_barov.cpp
Scholomance/boss_instructor_malicia.cpp
Scholomance/boss_jandice_barov.cpp
Scholomance/boss_kirtonos_the_herald.cpp
Scholomance/boss_kormok.cpp
Scholomance/boss_lord_alexei_barov.cpp
Scholomance/boss_lorekeeper_polkelt.cpp
Scholomance/boss_ras_frostwhisper.cpp
Scholomance/boss_the_ravenian.cpp
Scholomance/boss_vectus.cpp
Scholomance/instance_scholomance.cpp
ShadowfangKeep/instance_shadowfang_keep.cpp
ShadowfangKeep/shadowfang_keep.cpp
Stratholme/boss_baron_rivendare.cpp
Stratholme/boss_baroness_anastari.cpp
Stratholme/boss_cannon_master_willey.cpp
Stratholme/boss_dathrohan_balnazzar.cpp
Stratholme/boss_magistrate_barthilas.cpp
Stratholme/boss_maleki_the_pallid.cpp
Stratholme/boss_nerubenkan.cpp
Stratholme/boss_order_of_silver_hand.cpp
Stratholme/boss_postmaster_malown.cpp
Stratholme/boss_ramstein_the_gorger.cpp
Stratholme/boss_timmy_the_cruel.cpp
Stratholme/instance_stratholme.cpp
Stratholme/stratholme.cpp
SunkenTemple/instance_sunken_temple.cpp
SunkenTemple/sunken_temple.cpp
SunwellPlateau/boss_brutallus.cpp
SunwellPlateau/boss_eredar_twins.cpp
SunwellPlateau/boss_felmyst.cpp
SunwellPlateau/boss_kalecgos.cpp
SunwellPlateau/boss_kiljaeden.cpp
SunwellPlateau/boss_muru.cpp
SunwellPlateau/instance_sunwell_plateau.cpp
SunwellPlateau/sunwell_plateau.cpp
TempestKeep/arcatraz/arcatraz.cpp
TempestKeep/arcatraz/boss_harbinger_skyriss.cpp
TempestKeep/arcatraz/instance_arcatraz.cpp
TempestKeep/botanica/boss_commander_sarannis.cpp
TempestKeep/botanica/boss_high_botanist_freywinn.cpp
TempestKeep/botanica/boss_laj.cpp
TempestKeep/botanica/boss_thorngrin_the_tender.cpp
TempestKeep/botanica/boss_warp_splinter.cpp
TempestKeep/botanica/instance_the_botanica.cpp
TempestKeep/Eye/boss_alar.cpp
TempestKeep/Eye/boss_astromancer.cpp
TempestKeep/Eye/boss_kaelthas.cpp
TempestKeep/Eye/boss_void_reaver.cpp
TempestKeep/Eye/instance_the_eye.cpp
TempestKeep/Eye/the_eye.cpp
TempestKeep/Mechanar/boss_gatewatcher_gyrokill.cpp
TempestKeep/Mechanar/boss_gatewatcher_ironhand.cpp
TempestKeep/Mechanar/boss_mechano_lord_capacitus.cpp
TempestKeep/Mechanar/boss_nethermancer_sepethrea.cpp
TempestKeep/Mechanar/boss_pathaleon_the_calculator.cpp
TempestKeep/Mechanar/instance_mechanar.cpp
TempleOfAhnQiraj/boss_bug_trio.cpp
TempleOfAhnQiraj/boss_cthun.cpp
TempleOfAhnQiraj/boss_fankriss.cpp
TempleOfAhnQiraj/boss_huhuran.cpp
TempleOfAhnQiraj/boss_ouro.cpp
TempleOfAhnQiraj/boss_sartura.cpp
TempleOfAhnQiraj/boss_skeram.cpp
TempleOfAhnQiraj/boss_twinemperors.cpp
TempleOfAhnQiraj/boss_viscidus.cpp
TempleOfAhnQiraj/instance_temple_oF_ahnqiraj.cpp
TempleOfAhnQiraj/mob_anubisath_sentinel.cpp
Uldaman/boss_archaedas.cpp
Uldaman/boss_ironaya.cpp
Uldaman/instance_uldaman.cpp
Uldaman/uldaman.cpp
Ulduar/HallsOfLightning/boss_bjarngrim.cpp
Ulduar/HallsOfLightning/boss_ionar.cpp
Ulduar/HallsOfLightning/boss_loken.cpp
Ulduar/HallsOfLightning/boss_volkhan.cpp
Ulduar/HallsOfLightning/instance_halls_of_lightning.cpp
Ulduar/HallsOfStone/boss_krystallus.cpp
Ulduar/HallsOfStone/boss_maiden_of_grief.cpp
Ulduar/HallsOfStone/boss_sjonnir.cpp
Ulduar/HallsOfStone/halls_of_stone.cpp
Ulduar/HallsOfStone/instance_halls_of_stone.cpp
Ulduar/Ulduar/boss_algalon_the_observer.cpp
Ulduar/Ulduar/boss_assembly_of_iron.cpp
Ulduar/Ulduar/boss_auriaya.cpp
Ulduar/Ulduar/boss_flame_leviathan.cpp
Ulduar/Ulduar/boss_freya.cpp
Ulduar/Ulduar/boss_general_vezax.cpp
Ulduar/Ulduar/boss_hodir.cpp
Ulduar/Ulduar/boss_ignis.cpp
Ulduar/Ulduar/boss_kologarn.cpp
Ulduar/Ulduar/boss_mimiron.cpp
Ulduar/Ulduar/boss_razorscale.cpp
Ulduar/Ulduar/boss_thorim.cpp
Ulduar/Ulduar/boss_xt002.cpp
Ulduar/Ulduar/boss_yoggsaron.cpp
Ulduar/Ulduar/instance_ulduar.cpp
Ulduar/Ulduar/ulduar_teleporter.cpp
UtgardeKeep/UtgardeKeep/boss_ingvar_the_plunderer.cpp
UtgardeKeep/UtgardeKeep/boss_keleseth.cpp
UtgardeKeep/UtgardeKeep/boss_skarvald_dalronn.cpp
UtgardeKeep/UtgardeKeep/instance_utgarde_keep.cpp
UtgardeKeep/UtgardeKeep/utgarde_keep.cpp
UtgardeKeep/UtgardePinnacle/boss_palehoof.cpp
UtgardeKeep/UtgardePinnacle/boss_skadi.cpp
UtgardeKeep/UtgardePinnacle/boss_svala.cpp
UtgardeKeep/UtgardePinnacle/boss_ymiron.cpp
UtgardeKeep/UtgardePinnacle/instance_pinnacle.cpp
VaultOfArchavon/boss_archavon.cpp
VaultOfArchavon/boss_emalon.cpp
VaultOfArchavon/boss_koralon.cpp
VaultOfArchavon/boss_toravon.cpp
VaultOfArchavon/instance_vault_of_archavon.cpp
VioletHold/boss_cyanigosa.cpp
VioletHold/boss_erekem.cpp
VioletHold/boss_ichoron.cpp
VioletHold/boss_lavanthor.cpp
VioletHold/boss_moragg.cpp
VioletHold/boss_xevozz.cpp
VioletHold/boss_zuramat.cpp
VioletHold/instance_violet_hold.cpp
VioletHold/violet_hold.cpp
WailingCaverns/wailing_caverns.cpp
WailingCaverns/instance_wailing_caverns.cpp
ZulAman/boss_akilzon.cpp
ZulAman/boss_halazzi.cpp
ZulAman/boss_hexlord.cpp
ZulAman/boss_janalai.cpp
ZulAman/boss_nalorakk.cpp
ZulAman/boss_zuljin.cpp
ZulAman/instance_zulaman.cpp
ZulAman/zulaman.cpp
ZulFarrak/instance_zulfarrak.cpp
ZulFarrak/zulfarrak.cpp
ZulGurub/boss_grilek.cpp
ZulGurub/boss_hazzarah.cpp
ZulGurub/boss_jindo_the_godbreaker.cpp
ZulGurub/boss_kilnara.cpp
ZulGurub/boss_mandokir.cpp
ZulGurub/boss_renataki.cpp
ZulGurub/boss_venoxis.cpp
ZulGurub/boss_wushoolay.cpp
ZulGurub/boss_zanzil.cpp
ZulGurub/instance_zulgurub.cpp
#Instance_Arcatraz.cpp 
#Instance_AuchenaiCrypts.cpp 
#Instance_AzjolNerub.cpp 
#Instance_BlackfathomDeeps.cpp 
#Instance_BlackMorass.cpp 
#Instance_BlackrockDepths.cpp 
#Instance_BlackrockSpire.cpp 
#Instance_BloodFurnace.cpp 
#Instance_Botanica.cpp 
#Instance_CullingOfStratholme.cpp 
#Instance_Deadmines.cpp 
#Instance_DireMaul.cpp 
#Instance_DrakTharonKeep.cpp 
#Instance_Gundrak.cpp 
#Instance_HallsOfLightning.cpp 
#Instance_HellfireRamparts.cpp 
#Instance_MagistersTerrace.cpp 
#Instance_ManaTombs.cpp 
#Instance_Mauradon.cpp 
#Instance_Nexus.cpp 
#Instance_OldHillsbradFoothills.cpp 
#Instance_HallsOfStone.cpp 
#Instance_RagefireChasm.cpp 
#Instance_RazorfenDowns.cpp 
#Instance_ScarletMonastery.cpp 
#Instance_Scholomance.cpp 
#Instance_SethekkHalls.cpp 
#Instance_ShadowLabyrinth.cpp 
#Instance_ShadowfangKeep.cpp 
#Instance_TheMechanar.cpp 
#Instance_TheShatteredHalls.cpp 
#Instance_TheSlavePens.cpp 
#Instance_TheSteamvault.cpp 
#Instance_TheUnderbog.cpp 
#Instance_Uldaman.cpp 
#Instance_UtgardeKeep.cpp 
#Instance_WailingCaverns.cpp 
#Instance_TheStockade.cpp 
#Instance_ZulFarrak.cpp 
#Raid_BlackTemple.cpp 
#Raid_BlackwingLair.cpp 
#Raid_CoT_BattleOfMountHyjal.cpp 
#Raid_GruulsLair.cpp 
#Raid_Karazhan.cpp 
#Raid_MoltenCore.cpp 
#Raid_Naxxramas.cpp 
#Raid_OnyxiasLair.cpp 
#Raid_SerpentshrineCavern.cpp 
#Raid_TheEye.cpp 
#Raid_TheObsidianSanctum.cpp 
#Raid_Ulduar.cpp 
#Raid_ZulGurub.cpp 
#Raid_Magtheridons_Lair.cpp 
#SUNWELL_PLAT/Raid_SunwellPlateau.cpp 
#Raid_WorldBosses.cpp 
#Raid_ZulAman.cpp 
../Common/Instance_Base.cpp 
../Common/Base.cpp 
Setup.cpp )

SET( headers
#AtleracValley/atlerac_valley.h
#Auchindoun/AuchenaiCrypts/auchenai_crypts.h
#Auchindoun/ManaTombs/mana_tombs.h
Auchindoun/SethekkHalls/sethekk_halls.h
Auchindoun/ShadowLabyrinth/shadow_labyrinth.h
AzjolNerub/Ahnkahet/ahnkahet.h
AzjolNerub/AzjolNerub/azjol_nerub.h
BaradinHold/baradin_hold.h
BlackfathomDeeps/blackfathom_deeps.h
BlackrockDepths/blackrock_depths.h
BlackrockSpire/blackrock_spire.h
BlackTemple/black_temple.h
#BlackwingLair/blackwing_lair.h
CavernsOfTime/BattleForMountHyjal/hyjal.h
CavernsOfTime/BattleForMountHyjal/hyjal_trash.h
CavernsOfTime/BattleForMountHyjal/hyjalAI.h
CavernsOfTime/CullingOfStratholme/culling_of_stratholme.h
CavernsOfTime/DarkPortal/dark_portal.h
CavernsOfTime/EscapeFromDurnholdeKeep/old_hillsbrad.h
ChamberOfAspects/ObsidianSanctum/obsidian_sanctum.h
ChamberOfAspects/RubySanctum/ruby_sanctum.h
CoilfangReservoir/SerpentShrine/serpent_shrine.h
CoilfangReservoir/SteamVault/steam_vault.h
#CoilfangReservoir/underbog/underbog.h
CrusadersColiseum/TrialOfTheChampion/trial_of_the_champion.h
CrusadersColiseum/TrialOfTheCrusader/trial_of_the_crusader.h
Deadmines/deadmines.h
DraktharonKeep/drak_tharon_keep.h
Firelands/firelands.h
FrozenHalls/ForgeOfSouls/forge_of_souls.h
FrozenHalls/HallsOfReflection/halls_of_reflection.h
FrozenHalls/PitOfSaron/pit_of_saron.h
Gnomeregan/gnomeregan.h
GruulsLair/gruuls_lair.h
Gundrak/gundrak.h
HallsOfOrigination/halls_of_origination.h
HellfireCitadel/BloodFurnace/blood_furnace.h
HellfireCitadel/HellfireRamparts/hellfire_ramparts.h
HellfireCitadel/MagtheridonsLair/magtheridons_lair.h
HellfireCitadel/ShatteredHalls/shattered_halls.h
IcecrownCitadel/icecrown_citadel.h
Karazhan/karazhan.h
MagistersTerrace/magisters_terrace.h
#Maraudon/maraudon.h
MoltenCore/molten_core.h
Naxxramas/naxxramas.h
Nexus/EyeOfEternity/eye_of_eternity.h
Nexus/Nexus/nexus.h
Nexus/Oculus/oculus.h
OnyxiasLair/onyxias_lair.h
RazorfenDowns/razorfen_downs.h
RazorfenKraul/razorfen_kraul.h
RuinsOfAhnQiraj/ruins_of_ahnqiraj.h
ScarletMonastery/scarlet_monastery.h
Scholomance/scholomance.h
ShadowfangKeep/shadowfang_keep.h
Stratholme/stratholme.h
SunkenTemple/sunken_temple.h
SunwellPlateau/sunwell_plateau.h
TempestKeep/arcatraz/arcatraz.h
TempestKeep/botanica/the_botanica.h
TempestKeep/Eye/the_eye.h
TempestKeep/Mechanar/mechanar.h
TempleOfAhnQiraj/temple_of_ahnqiraj.h
Uldaman/uldaman.h
Ulduar/HallsOfLightning/halls_of_lightning.h
Ulduar/HallsOfStone/halls_of_stone.h
Ulduar/Ulduar/ulduar.h
UtgardeKeep/UtgardeKeep/utgarde_keep.h
UtgardeKeep/UtgardePinnacle/utgarde_pinnacle.h
VaultOfArchavon/vault_of_archavon.h
VioletHold/violet_hold.h
WailingCaverns/wailing_caverns.h
ZulAman/zulaman.h
ZulFarrak/zulfarrak.h
ZulGurub/zulgurub.h
#Raid_Naxxramas.h
#Raid_Ulduar.h
Setup.h
../Common/Base.h
../Common/EasyFunctions.h
../Common/Instance_Base.h )

foreach(src IN ITEMS ${sources} )
  SET( SRCS ${SRCS} ${prefix}/${src} )
endforeach(src)
foreach(src IN ITEMS ${headers} )
  SET( HEADERS ${HEADERS} ${prefix}/${src} )
endforeach(src)


include_directories( ${include_dirs} ${prefix} )
add_library( ${PROJECT_NAME} SHARED ${SRCS} ${HEADERS} )
add_dependencies( ${PROJECT_NAME} ${dependancies} )
target_link_libraries( ${PROJECT_NAME} ${linkages} )

include(PCHSupport)
IF( CMAKE_GENERATOR MATCHES Visual*)
	ADD_NATIVE_PRECOMPILED_HEADER(${PROJECT_NAME} Setup.h ${prefix}/Setup.cpp)
ENDIF()

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${ARCPRO_SCRIPTLIB_PATH} LIBRARY DESTINATION ${ARCPRO_SCRIPTLIB_PATH})
#Cleap up our variables(Not required.)
unset( prefix)
unset( SRCS )
unset( sources )